Fix padding to not have horizontal scrolling

--- a/src/components/Activities/ActivityDetail.css
+++ b/src/components/Activities/ActivityDetail.css
@@ -30,6 +30,7 @@
   border-top: none;
   margin-top: 0;
   padding-top: 0;
+  margin-right: 0;
 }
 
 .activity-page h2:first-child {
